<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ian.pixelart.activities.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:background="@color/colorPrimary">

    <com.example.ian.pixelart.activities.Canvas
        android:id="@+id/canvas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccentLight"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">

    </com.example.ian.pixelart.activities.Canvas>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/canvas"
        app:layout_constraintVertical_bias="0.0">

        <Spinner
            android:id="@+id/color_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccentLight"
            android:entries="@array/color_array"
            android:prompt="@string/color_prompt"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/pictureBttn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/Picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/loadBttn"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <ImageButton
            android:id="@+id/eraserBttn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/uer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/checkbox_off_background" />

        <Switch
            android:id="@+id/eraserSwitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:switchMinWidth="50dp"
            android:switchPadding="15dp"
            android:text="@string/er"
            android:textColor="@color/colorAccentLight"
            android:textOff="@string/eroff"
            android:textOn="@string/eron"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/color_spinner"
            tools:text="@string/er" />

        <CheckBox
            android:id="@+id/BigBrush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/BB"
            android:textColor="@color/colorAccentLight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eraserSwitch" />

        <ImageButton
            android:id="@+id/saveBttn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_save" />

        <ImageButton
            android:id="@+id/loadBttn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveBttn"
            app:srcCompat="@android:drawable/stat_sys_download" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
